--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -1,9 +1,7 @@
 {% extends 'core/base.html' %}
 
-{% block title %}{{ product.title }}{% endblock %}
-
 {% block content %}
-    <h1 class="text-2xl">{{ product.title }}</h1>
+{{ product.title }}
     <p class="text-xs text-gray-500">UAH {{ product.get_display_price }}</p>
     
     {% if product.description %}
