--- a/store/templates/store/category_detail.html
+++ b/store/templates/store/category_detail.html
@@ -9,6 +9,11 @@
             <div class="product w-1/3 p-2">
                 <div class="p-4 bg-gray-100">
                     <a href="{% url 'product_detail' product.category.slug product.slug %}">
+                        {% if product.image %}
+                            <div class="image mb-4">
+                                <img src="{{ product.image.url }}" alt="Image of {{ product.title }}">
+                            </div>
+                        {% endif %}
                         <h2 class="text-xl">{{ product.title }}</h2>
                         <p class="text-xs text-gray-600">UAH  {{ product.get_display_price }}</p>
                     </a>
