--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -1,8 +1,18 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-{{ product.title }}
-    <p class="text-xs text-gray-500">UAH {{ product.get_display_price }}</p>
+{% if product.image %}
+<div class="image mb-4">
+    <img src="{{ product.image.url }}" alt="Image of {{ product.title }}">
+</div>
+{% endif %}
+
+   <h1 class="text-2xl">{{ product.title }}</h1>
+    <p class="text-xs text-gray-500">
+        UAH {{ product.get_display_price }}
+        -
+        {% firstof product.user.get_full_name product.user.username %}
+    </p>
     
     {% if product.description %}
     <p class="mt-4">
