--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -11,7 +11,7 @@
     <p class="text-xs text-gray-500">
         UAH {{ product.get_display_price }}
         -
-        {% firstof product.user.get_full_name product.user.username %}
+        <a href="{% url 'vendor_detail' product.user.id %}">{% firstof product.user.get_full_name product.user.username %}</a>
     </p>
     
     {% if product.description %}
