--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,6 +27,7 @@
 
                 {% if request.user.is_authenticated %}
                     <a href="{% url 'myaccount' %}" class="text-white">My account</a>    
+                    <a href="{% url 'my_store' %}" class="text-white">My store</a>
                 {% endif %}
 
             </div>
