--- a/userprofile/templates/userprofile/add_product.html
+++ b/userprofile/templates/userprofile/add_product.html
@@ -11,4 +11,8 @@
 
         <button class="py-4 px-8 bg-teal-500 text-white hover:bg-teal-800">Submit</button>
     </form>
+
+    {% if title == 'Edit product' %}
+        <a href="{% url 'delete_product' product.id %}" class="mt-2 inline-block py-4 px-8 bg-red-500 text-white">Delete product</a>
+    {% endif %}
 {% endblock %}
