--- a/store/templates/store/cart_view.html
+++ b/store/templates/store/cart_view.html
@@ -3,19 +3,26 @@
 {% block title %}Cart{% endblock %}
 
 {% block content %}
-    <h1 class="text-2xl">Cart</h1>
+    <h1 class=" mb-6 text-2xl">Cart</h1>
 
     {% for item in cart %}
-        <p class="mb-2">
-            <b>Title: </b>{{ item.product.title }}<br>
-            <b>Quantity: </b>{{ item.quantity }}<br>
+        <div class=" px-4 py-4 bg-teal-100 mb-2">
+            <h2 class=""text-2xl>{{ item.product.title }}</h2>
 
-            <a href="{% url 'change_quantity' item.product.id %}?action=increase">Increase</a>
-            <a href="{% url 'change_quantity' item.product.id %}?action=decrease">Decrease</a>
-            <a href="{% url 'remove_from_cart' item.product.id %}">Remove from cart</a>
-        </p>    
+            <div class="mt-4">
+                <a href="{% url 'change_quantity' item.product.id %}?action=increase" class="p-2 rounded-xl bg-teal-500 text-white">+</a>
+                {{ item.quantity }}
+                <a href="{% url 'change_quantity' item.product.id %}?action=decrease" class="p-2 rounded-xl bg-teal-500 text-white">-</a>
+                <a href="{% url 'remove_from_cart' item.product.id %}">Remove from cart</a>
+            </div>
+        </div>    
     {% endfor %}
 
+    <hr class="mb-4 mt-4">
+
     <strong>Total cost: </strong>{{ cart.get_total_cost }}
+
+    <hr class="mt-4 mb-4">
+    <a href="#" class="inline-block px-8 py-4 bg-teal-500 text-white">Checkout</a>
 
 {% endblock %}
